em1ds/fft.h

#define MAX_FACTORS 32
enum fft_direction { FFT_FORWARD, FFT_BACKWARD };
typedef struct {
	unsigned int p, n;
} t_fft_factors;
typedef struct {
	unsigned int n;
    enum fft_direction direction;
    t_fft_factors factors[MAX_FACTORS];
    float complex *phase;
} t_fft_cfg;
enum fftr_storage { FFTR_CCS, FFTR_PERM };
typedef struct {
	enum fftr_storage storage;
	t_fft_cfg cfg;
    float complex *phase;
} t_fftr_cfg;